<resources>
    <string name="app_name">World of posts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="cdesc">image</string>
    <string name="text">text</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="update_your_name">update your name</string>
    <string name="select_image">select image</string>
    <string name="save">save</string>
    <string name="post_title">post title</string>
    <string name="post_content">post content</string>
    <string name="post">Post</string>
    <string name="confirm_password">confirm password</string>
    <string name="enter_password">enter password</string>
    <string name="enter_mail">enter mail</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="sign_in">sign in</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="register_now">register now</string>
    <string name="enter_pass">enter pass</string>
    <string name="validmail">enter valid mail</string>
    <string name="validPass">enter password</string>
    <string name="loading">loading</string>
    <string name="conerror">Connection error</string>
    <string name="enterTitle">enter post title</string>
    <string name="enterContent">enter post content</string>
    <string name="success">success</string>
    <string name="conerrorr">connection error</string>
    <string name="errorhappened">error happened</string>
    <string name="selectimage">select an image</string>
    <string name="enter_prof_name">enter name</string>
    <string name="choose">choose your pic</string>
    <string name="regvalidmail">enter valid mail</string>
    <string name="minimum6">enter valid password minimum 6 chars</string>
    <string name="passmatch">password doesn\'t match</string>
    <string name="saved">saved</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="fabcd">fab</string>
</resources>
